--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
     <div class="container">
         <div class="header">
             <h1>Sintetizador de Formantes Klatt</h1>
-            <p>Implementación fiel al paper original "Software for a cascade/parallel formant synthesizer" (1980)</p>
+            <p>Software for a cascade/parallel formant synthesizer (1980)</p>
         </div>
         
         <div class="main-content">
