Simplify title and messages in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sintetizador de Formantes Klatt - Implementación Fiel al Paper Original</title>
+    <title>Sintetizador de Formantes Klatt</title>
     <style>
         * {
             margin: 0;
@@ -651,7 +651,7 @@
             </div>
 
             <div class="info-section">
-                <h3>Implementación Fiel al Paper Original</h3>
+                <h3></h3>
                 <p>
                     Esta implementación replica exactamente los algoritmos descritos en el paper de Dennis H. Klatt (1980):
                 </p>
@@ -764,7 +764,7 @@
                 this.initializeControls();
                 this.drawSpectrum();
                 this.createVowelSpace();
-                this.showMessage('Sintetizador Klatt inicializado - Implementación fiel al paper original', 'success');
+                this.showMessage('Sintetizador Klatt inicializado', 'success');
             }
 
             showMessage(text, type = 'success') {
